--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 click==6.6
 Flask==0.11.1
+Flask-Login==0.4.0
 Flask-SQLAlchemy==2.1
+Flask-WTF==0.13.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
@@ -8,3 +10,4 @@ Pillow==3.4.2
 PyMySQL==0.7.9
 SQLAlchemy==1.1.4
 Werkzeug==0.11.11
+WTForms==2.1
